--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "codemirror": "^5.62.0",
     "iview": "^3.5.4",
+    "mixin-js": "^0.1.5",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.20",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
