--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "codemirror": "^5.62.0",
+    "echarts": "^4.9.0",
     "iview": "^3.5.4",
     "mixin-js": "^0.1.5",
+    "v-charts": "^1.19.0",
+    "v-echarts": "^1.0.2",
     "vue": "^2.5.2",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.0.1",
